.provarCaches/00D410000011HE0EAM/objects/asp04__AsperatoOneSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings that apply to the Asperato ONE package</description>
    <fields>
        <fullName>asp04__BACS_Delay__c</fullName>
        <label>BACS Delay</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>asp04__CreatePaymentSchedule__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked (default) then a Payment Schedule row will be linked to the Authorisation when a brand new row is inserted.  This does not apply when an Authorisation is updated.</inlineHelpText>
        <label>Create Payment Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>asp04__Customer_ID__c</fullName>
        <label>Customer ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Is_Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Running Live</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>asp04__Server_URL__c</fullName>
        <label>Server URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>asp04__Suppress_Notification_for_Payments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set true to suppress PSP Notification and send your own custom notification for this payments.</description>
        <inlineHelpText>Set true to suppress PSP Notification and send your own custom notification for this payments.</inlineHelpText>
        <label>Suppress Notification for Payments</label>
        <type>Checkbox</type>
    </fields>
    <label>Asperato ONE settings</label>
</CustomObject>